--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ ol {
 	<li>git config --list</li>
 	<li>git add meu_arquivo.txt</li>
 </ol>
-<img src="img/img.webp">
+
+<img src="img/i.jpeg">
+<img src="img/1.png">
 </body>
 </html>
